update docker with bun

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,21 +1,31 @@
-# Use the Node alpine official image
-# https://hub.docker.com/_/node
-FROM node:lts
+# Use official Bun image
+FROM oven/bun:1.1.13 as base
 
-# Create and change to the app directory.
 WORKDIR /app
 
-# Copy the files to the container image
-COPY package*.json ./
+# Copy package files and install dependencies
+COPY bun.lockb package.json ./
+RUN bun install
 
-# Install packages
-RUN npm ci
+# Copy the rest of the project
+COPY . .
 
-# Copy local code to the container image.
-COPY . ./
+# Build the app (adjust for your actual build command)
+RUN bun run build
 
-# Build the app.
-RUN npm run build
+# Final image for running (optional for static hosting)
+FROM oven/bun:1.1.13 as runner
+WORKDIR /app
 
-# Serve the app
-CMD ["npm", "run", "preview", "--", "--port", "8080"]
+COPY --from=base /app ./
+
+# If your app uses a dev server (like for SSR)
+# CMD ["bun", "run", "preview"]
+
+# If you built a static site (e.g. using `adapter-static`)
+# you can serve it with something like serve or wrangler etc.
+# Example:
+# RUN bun add serve
+# CMD ["bun", "x", "serve", "build"]
+
+CMD ["bun", "run", "preview"]
