--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
 	},
 	"dependencies": {
 		"@inlang/paraglide-js": "^2.0.0",
-		"svelte-clerk": "^0.11.3"
+		"svelte-clerk": "^0.11.3",
+		"svelte-french-toast": "^1.2.0"
 	}
 }
